--- a/auth/package.json
+++ b/auth/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "ts-node-dev --poll ./src/index.ts",
     "test": "jest --watchAll --no-cache",
-    "test:ci" : "jest"
+    "test:ci": "jest"
   },
   "jest": {
     "preset": "ts-jest",
@@ -20,11 +20,11 @@
   "license": "ISC",
   "config": {
     "mongodbMemoryServer": {
-      "version" : "latest"
+      "version": "v4.4-latest"
     }
   },
   "dependencies": {
-    "@deverober/common": "^1.0.6",
+    "@deverober/common": "^1.0.16",
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
@@ -41,7 +41,7 @@
     "@types/jest": "^28.1.1",
     "@types/supertest": "^2.0.12",
     "jest": "^28.1.0",
-    "mongodb-memory-server": "^8.6.0",
+    "mongodb-memory-server": "^8.7.2",
     "supertest": "^6.2.3",
     "ts-jest": "^28.0.4"
   }
